* Fix icons in collapsed view

--- a/app/styles/hack.sass
+++ b/app/styles/hack.sass
@@ -56,10 +56,13 @@ a
         display: none
       img
         position: absolute
-        left: 11px
+        right: 7px
         margin-top: 3px
       li
         margin-top: 1px
+        ul
+          padding-top: 20px
+          margin-right: -10px
 
     .hackid
       font-size: 19px
